--- a/app/views/oauth/admin/options.rhtml
+++ b/app/views/oauth/admin/options.rhtml
@@ -1,5 +1,5 @@
 <div class='admin_content'>
-<% admin_form_for :options, @options do |f| -%>
+<%= admin_form_for :options, @options do |f| -%>
 
   <%= f.select :user_class_id, UserClass.options %>
 <%= f.submit_tag 'Save' %>
